@@ -1,19 +1,18 @@
 package ua.com.fielden.platform.processors.metamodel.utils;
 
-import static java.lang.String.format;
+import static java.util.Collections.unmodifiableSet;
 import static java.util.stream.Collectors.toCollection;
+import static java.util.stream.Collectors.toSet;
 import static ua.com.fielden.platform.processors.metamodel.MetaModelConstants.METAMODELS_CLASS_QUAL_NAME;
-import static ua.com.fielden.platform.processors.metamodel.MetaModelConstants.META_MODEL_SUPERCLASS;
 import static ua.com.fielden.platform.processors.metamodel.MetaModelConstants.META_MODEL_ALIASED_NAME_SUFFIX;
 import static ua.com.fielden.platform.processors.metamodel.MetaModelConstants.META_MODEL_NAME_SUFFIX;
+import static ua.com.fielden.platform.processors.metamodel.MetaModelConstants.META_MODEL_SUPERCLASS;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
@@ -43,7 +42,7 @@ import ua.com.fielden.platform.processors.metamodel.models.PropertyMetaModel;
  *
  */
 public class MetaModelFinder extends ElementFinder {
-    
+
     public MetaModelFinder(final Elements elements, final Types types) {
         super(elements, types);
     }
@@ -51,15 +50,15 @@ public class MetaModelFinder extends ElementFinder {
     public boolean isMetaModel(final TypeElement typeElement) {
         return isSubtype(typeElement.asType(), META_MODEL_SUPERCLASS);
     }
-    
+
     public boolean isMetaModelAliased(final MetaModelElement mme) {
         return mme.getSimpleName().toString().endsWith(META_MODEL_ALIASED_NAME_SUFFIX);
     }
-    
+
     public Set<VariableElement> findPropertyMetaModelFields(final MetaModelElement mme) {
         return findNonStaticFields(mme).stream()
                 .filter(field -> isFieldOfType(field, PropertyMetaModel.class))
-                .collect(Collectors.toSet());
+                .collect(toSet());
     }
 
     public Set<VariableElement> findEntityMetaModelFields(final MetaModelElement mme) {
@@ -79,9 +78,9 @@ public class MetaModelFinder extends ElementFinder {
                     }
                     return false;
                 })
-                .collect(Collectors.toSet());
+                .collect(toSet());
     }
-    
+
     /**
      * Finds all methods of a meta-model that model properties of the underlying entity. Processes the whole meta-model hierarchy (i.e. meta-models that extend other meta-models).
      * @param mme the target meta-model
@@ -120,7 +119,7 @@ public class MetaModelFinder extends ElementFinder {
                     final TypeElement fieldTypeArgumentTypeElement = (TypeElement) fieldTypeArgument.asElement();
                     return newMetaModelElement(fieldTypeArgumentTypeElement);
                 })
-                .collect(Collectors.toSet());
+                .collect(toSet());
     }
 
     /**
@@ -142,12 +141,19 @@ public class MetaModelFinder extends ElementFinder {
         return !method.getModifiers().contains(Modifier.STATIC) &&
                 isSubtype(method.getReturnType(), EntityMetaModel.class);
     }
-    
+
+    /**
+     * Identifies whether {@code mmc} and {@code mme} represent the same meta-model type.
+     *
+     * @param mmc
+     * @param mme
+     * @return
+     */
     public boolean isSameMetaModel(final MetaModelConcept mmc, final MetaModelElement mme) {
         return mmc.getQualifiedName().equals(mme.getQualifiedName().toString()) ||
-                mmc.getAliasedQualifiedName().equals(mme.getQualifiedName().toString());
+               mmc.getAliasedQualifiedName().equals(mme.getQualifiedName().toString());
     }
-    
+
     /**
      * Attempts to find a meta-model for a given entity.
      * @param entityElement
@@ -169,12 +175,12 @@ public class MetaModelFinder extends ElementFinder {
     public Optional<MetaModelElement> findMetaModelAliased(final MetaModelElement mme) {
         // aliasedMetaModelName = metaModelName - META_MODEL_NAME_SUFFIX + META_MODEL_ALIASED_NAME_SUFFIX
         final String entitySimpleName = StringUtils.substringBeforeLast(mme.getSimpleName().toString(), META_MODEL_NAME_SUFFIX);
-        final String qualName = String.format("%s.%s%s", mme.getPackageName(), entitySimpleName, META_MODEL_ALIASED_NAME_SUFFIX);
+        final String qualName = "%s.%s%s".formatted(mme.getPackageName(), entitySimpleName, META_MODEL_ALIASED_NAME_SUFFIX);
         return Optional.ofNullable(elements.getTypeElement(qualName)).map(this::newMetaModelElement);
     }
 
     /**
-     * Identifies and collects all declared members in the MetaModels element, which represent meta-models (i.e., extend {@link EntityMetaModel}).  
+     * Identifies and collects all declared fields in the MetaModels element, which represent meta-models (i.e., extend {@link EntityMetaModel}).  
      *
      * @param typeElement
      * @param elementUtils
@@ -193,13 +199,13 @@ public class MetaModelFinder extends ElementFinder {
                 .map(method -> newMetaModelElement(toTypeElement(method.getReturnType())))
                 .forEach(mme -> metaModels.add(mme));
         
-        return Collections.unmodifiableSet(metaModels);
+        return unmodifiableSet(metaModels);
     }
-    
+
     public MetaModelElement newMetaModelElement(final TypeElement typeElement) {
         return new MetaModelElement(typeElement, getPackageName(typeElement));
     }
-    
+
     public boolean isActive(final MetaModelElement mme) {
         return mme.getKind() == ElementKind.CLASS;
     }
@@ -230,7 +236,7 @@ public class MetaModelFinder extends ElementFinder {
      * @return FQN of this entity's meta-model
      */
     public String resolveMetaModelName(final String entityPkgName, final String entitySimpleName) {
-        return format("%s.%s", resolveMetaModelPkgName(entityPkgName), resolveMetaModelSimpleName(entitySimpleName));
+        return "%s.%s".formatted(resolveMetaModelPkgName(entityPkgName), resolveMetaModelSimpleName(entitySimpleName));
     }
 
     /**
@@ -242,7 +248,7 @@ public class MetaModelFinder extends ElementFinder {
      * @return FQN of this entity's aliased meta-model
      */
     public String resolveAliasedMetaModelName(final String entityPkgName, final String entitySimpleName) {
-        return format("%s.%s", resolveMetaModelPkgName(entityPkgName), resolveAliasedMetaModelSimpleName(entitySimpleName));
+        return "%s.%s".formatted(resolveMetaModelPkgName(entityPkgName), resolveAliasedMetaModelSimpleName(entitySimpleName));
     }
 
 }
