@@ -11,27 +11,37 @@ import com.google.testing.compile.JavaFileObjects;
 
 import ua.com.fielden.platform.processors.test_utils.exceptions.PackageNotFoundException;
 
-public class JavaFileObjectFinder {
-    
+/**
+ * Set of utilities to work with Java files.
+ *
+ * @author TG Team
+ *
+ */
+public final class JavaFileObjectFinder {
+
+    private JavaFileObjectFinder () {}
+
     /**
      * Searches a package for java source and class files. The given package must be present on the classpath.
+     *
      * @param pkgName
      * @return a list of found {@link JavaFileObject}s
      */
-    public static List<JavaFileObject> searchPackage(final String pkgName) throws PackageNotFoundException {
+    public static List<JavaFileObject> searchPackage(final String pkgName) {
         final String pkgNameSlashed = pkgName.replace('.', '/');
         final URL entitiesPkgUrl = ClassLoader.getSystemResource(pkgNameSlashed);
         if (entitiesPkgUrl == null) {
             // What action should be taken if the package with test entities wasn't found?
             // Should this throw a runtime exception?
-            throw new PackageNotFoundException(String.format("%s package was not found.", pkgName));
+            throw new PackageNotFoundException("%s package was not found.".formatted(pkgName));
         }
 
         // find all *.java files inside the package
         return Stream.of(new File(entitiesPkgUrl.getFile()).listFiles())
                 .map(File::getName)
                 .filter(filename -> filename.endsWith(".java") || filename.endsWith(".class"))
-                .map(filename -> JavaFileObjects.forResource(String.format("%s/%s", pkgNameSlashed, filename)))
+                .map(filename -> JavaFileObjects.forResource("%s/%s".formatted(pkgNameSlashed, filename)))
                 .toList();
     }
+
 }
